[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/ConfirmationPopup.gd" type="Script" id=1]
[ext_resource path="res://img/gui/popup_big.png" type="Texture" id=2]
[ext_resource path="res://fonts/resources/spartanMB60.tres" type="DynamicFont" id=3]
[ext_resource path="res://img/gui/green_btn.png" type="Texture" id=4]
[ext_resource path="res://img/gui/green_btn_pressed.png" type="Texture" id=5]
[ext_resource path="res://fonts/resources/spartanMBBold50.tres" type="DynamicFont" id=6]
[ext_resource path="res://img/gui/red_btn.png" type="Texture" id=7]
[ext_resource path="res://img/gui/red_btn_pressed.png" type="Texture" id=8]

[node name="ConfirmationPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Content" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -474.5
margin_top = -250.0
margin_right = 474.5
margin_bottom = 250.0
rect_pivot_offset = Vector2( 474, 250 )

[node name="NinePatchRect" type="NinePatchRect" parent="Content"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 396, 396 )
patch_margin_left = 180
patch_margin_top = 180
patch_margin_right = 180
patch_margin_bottom = 180

[node name="Question" type="Label" parent="Content"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 70.0
margin_right = -54.0
margin_bottom = -90.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.458824, 0.321569, 0.380392, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
text = "¿Seguro que quieres cerrar el juego?"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Buttons" type="Control" parent="Content"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -198.5
margin_top = -81.0
margin_right = 200.5
margin_bottom = 69.0
rect_pivot_offset = Vector2( 270, 75 )
mouse_filter = 2

[node name="Yes" type="TextureButton" parent="Content/Buttons"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Text" type="Label" parent="Content/Buttons/Yes"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
text = "SÍ"
align = 1
valign = 1

[node name="No" type="TextureButton" parent="Content/Buttons"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -75.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="Text" type="Label" parent="Content/Buttons/No"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
text = "NO"
align = 1
valign = 1
[connection signal="gui_input" from="." to="." method="_on_ConfirmationPopup_gui_input"]
[connection signal="pressed" from="Content/Buttons/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Content/Buttons/No" to="." method="_on_No_pressed"]
